# poet-control-loop-masters-thesis

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.devcontainer/: Dockerfile  devcontainer.json
CMake/: FindR.cmake  FindRInside.cmake  FindRRuntime.cmake  FindRcpp.cmake  POET_Scripts.cmake
R_lib/: CMakeLists.txt  ai_surrogate_model.R  init_r_lib.R  kin_r_library.R  kin_r_library_warnings.R  parallel_r_library.R
app/: CMakeLists.txt  poet.cpp  poet.h.in  poet_prm.cpp
apps/: CMakeLists.txt
apps/initializer/: main.cpp
bench/: CMakeLists.txt
bench/barite/: CMakeLists.txt  README.org  barite.R  barite.pqi  barite_200.R  barite_200_rt.R  barite_200ai_surrogate_input_script.R  barite_50ai.R  barite_50ai.rds  barite_50ai_rt.R  barite_50ai_surr_mdl.R  barite_het_rt.R  barite_interp_eval.R  min_max_bounds.rds  model_min_max_float64.keras
bench/barite/het/: barite_het.pqi  runtime.R  test.R
bench/dolo/: CMakeLists.txt  Eval.R  README.org  dol.pqi  dolo_200.R  dolo_diffu_inner.R  dolo_diffu_inner_large.R  dolo_fgcs_3_rt.R  dolo_inner.R  dolo_inner.rds  dolo_inner_large.R  dolo_inner_rt.R  dolo_interp.R  dolo_interp_long.R  dolo_interp_rt.R
bench/dolo/het/: dol.pqi  dolo_200.R  dolo_200_rt.R
bench/dolo/old/: dolo_diffu_inner.R  dolo_interp_long.R
bench/dolo_diffu_inner/: CMakeLists.txt  dolo_diffu_inner.R  dolo_diffu_inner_large.R  dolo_inner.pqi
bench/fgcs/: 20241211_README.tex  CMakeLists.txt  EvalFGCS.R  README.org  barite_fgcs_2.R  barite_fgcs_2.pqi  barite_fgcs_2_rt.R  barite_fgcs_3.pqi  barite_fgcs_4.R  barite_fgcs_4_rt.R  dolo_fgcs.pqi  dolo_fgcs_3.R  dolo_fgcs_3_rt.R
bench/surfex/: CMakeLists.txt  ExBase.pqi  PoetEGU_surfex_500.R  PoetEGU_surfex_500_rt.R  README.org  SurfExBase.pqi  SurfexEGU.pqi  ex.R  ex_rt.R  surfex.R  surfex_rt.R
data/: CMakeLists.txt  SimCompKtz.R  SimDol1D_diffu.R  SimDol2D.R  SimDol2D_diffu.R  SimDol2D_diffu.yaml
doc/: Doxyfile
docs/: CMakeLists.txt  Doxyfile.in  Input_Scripts.md  Output.md  POET.drawio  class_diagram.md
include/highfive/: H5DataSet.hpp  H5DataType.hpp  H5File.hpp  H5PropertyList.hpp
include/highfive/bits/: H5DataType_misc.hpp  H5File_misc.hpp  H5PropertyList_misc.hpp
include/poet/: ChemSim.hpp  ChemSimPar.hpp  ChemSimSeq.hpp  ChemistryModule.hpp  DHT.h  DHT_Types.hpp  DHT_Wrapper.hpp  DataStructures.hpp  DiffusionModule.hpp  Field.hpp  Grid.hpp  HashFunctions.hpp  Interpolation.hpp  LookupKey.hpp  Macros.hpp  PhreeqcWrapper.hpp  RInsidePOET.hpp  SimParams.hpp  TransportSim.hpp
lib/cmake/HighFive/: HighFiveTargets.cmake
lib/cmake/doctest/: doctestConfigVersion.cmake
share/poet/barite/: barite_200.qs2  barite_het.qs2  barite_het_rt.R
share/poet/dolo/: dolo_inner_large.qs2  dolo_inner_large_rt.R  dolo_interp.qs2
src/: BaseChemModule.cpp  CMakeLists.txt  ChemMaster.cpp  ChemSeq.cpp  ChemSim.cpp  ChemWorker.cpp  DHT.c  DHT.cpp  DHT.h  DHT_Wrapper.cpp  DiffusionModule.cpp  Grid.cpp  HashFunctions.cpp  Makefile  PhreeqcWrapper.cpp  RFun_Eval.R  RRuntime.cpp  SimComp2D.R  SimDol2D.R  SimDolKtz.R  SimParams.cpp  Test_Pro.R  TransportSim.cpp  dht_wrapper.cpp  dht_wrapper.h  global_buffer.h  initializer.cpp  kin.cpp  kin_r_library.R  poet.cpp  poet.h.in  poet.hpp  poet.hpp.in  r_utils.cpp  r_utils.h  worker.cpp  worker.h
src/Base/: Grid.cpp  Grid.hpp  Macros.hpp  RInsidePOET.hpp  SimParams.cpp  SimParams.hpp  argh.hpp
src/Chemistry/: ChemistryDefs.hpp  ChemistryModule.cpp  ChemistryModule.hpp  MasterFunctions.cpp  WorkerFunctions.cpp  enums.hpp
src/Chemistry/SurrogateModels/: DHT.c  DHT.h  DHT_Wrapper.cpp  DHT_Wrapper.hpp  HashFunctions.cpp  HashFunctions.hpp  Interpolation.hpp  InterpolationModule.cpp  LookupKey.hpp  ProximityHashTable.cpp  Rounding.hpp
src/ChemistryModule/: CMakeLists.txt  ChemistryModule.cpp  DHT.c  DHT_Wrapper.cpp  HashFunctions.cpp  MasterFunctions.cpp  WorkerFunctions.cpp
src/ChemistryModule/SurrogateModels/: CMakeLists.txt  DHT.c  DHT_Wrapper.cpp  HashFunctions.cpp  InterpolationModule.cpp  ProximityHashTable.cpp
src/Control/: ControlModule.cpp  ControlModule.hpp
src/DHT/: CMakeLists.txt  DHT.c  DHT.cpp  DHT.h  DHT_Wrapper.cpp  DHT_Wrapper.h
src/DataStructures/: CMakeLists.txt  DataStructures.hpp  Field.cpp  Field.hpp  NamedVector.hpp
src/IO/: Datatypes.hpp  HDF5Functions.hpp  StatsIO.cpp  StatsIO.hpp  checkpoint.cpp
src/Init/: CMakeLists.txt  ChemistryInit.cpp  DiffusionInit.cpp  GridInit.cpp  InitialList.cpp  InitialList.hpp
src/Transport/: DiffusionModule.cpp  DiffusionModule.hpp
src/model/: CMakeLists.txt  ChemMaster.cpp  ChemSim.cpp  ChemSim.h  ChemWorker.cpp  Grid.cpp  Grid.h  TransportSim.cpp  TransportSim.h
src/util/: CMakeLists.txt  Parser.cpp  Parser.h  Profiler.cpp  Profiler.h  RRuntime.cpp  RRuntime.h  SimParams.cpp  SimParams.h  argh.h
test/: CMakeLists.txt  RInsidePOET_funcs.R  testDataStructures.cpp  testDataStructures.hpp.in  testField.cpp  testNamedVector.cpp  testRounding.cpp  testStats.cpp
util/: ci.Dockerfile
util/data_evaluation/: RFun_Eval.R  RFun_Eval_qs2.R  Test_Validation.R  interpret_keys.cpp  jlFun_Eval.jl  run_vis.R
util/rastogi/: calculate_mape_from_qs2.R  chem_mean.R  maxmape_multiple.R  mean_time.R  median_mape.R  one_plot.R  scatterplot.R
